fixing safary code highlighter overflow

--- a/public/css/poole.css
+++ b/public/css/poole.css
@@ -187,6 +187,7 @@ pre code {
 .highlight pre {
   margin-bottom: 0;
   overflow-x: auto;
+  word-wrap: normal;
 }
 
 /* Gist via GitHub Pages */
